# ShadeTech

./: .clang-format  .clang-tidy  .gitignore  .nvimrc  .todo  CMakeLists.txt  LICENSE  README.md  build.py
CMake/: Platform.cmake  Vulkan.cmake  Warnings.cmake
ShadeTech/: Application.cxx  Application.h  CMakeLists.txt  Core.cxx  Log.h  Platform.h  ShadeTech.cpp  ShadeTech.cxx  Types.h  application.h  assert.h  log.h  main.cpp
ShadeTech/Networking/: IPAddress.cxx  IPAddress.h  Networking.cxx  Packet.cxx  Packet.h  ip_address.h  packet.h
ShadeTech/Networking/Socket/: Socket.cxx  TCPClientSocket.cpp  TCPClientSocket.cxx  TCPClientSocket.h  TCPConnectionSocket.cpp  TCPConnectionSocket.cxx  TCPConnectionSocket.h  TCPServerSocket.cpp  TCPServerSocket.cxx  TCPServerSocket.h  TCP_client_socket.h  TCP_connection_socket.cpp  TCP_connection_socket.h  TCP_server_socket.cpp  TCP_server_socket.h
ShadeTech/Platform/Posix/Networking/: Networking.cxx  Socket.cxx
ShadeTech/Platform/Posix/Networking/Socket/: Posix_TCP_client_socket.cpp  Posix_TCP_client_socket.h  Posix_TCP_connection_socket.cpp  Posix_TCP_connection_socket.h  Posix_TCP_server_socket.h  TCPClientSocket.cpp  TCPClientSocket.cxx  TCPClientSocket.h  TCPConnectionSocket.cpp  TCPConnectionSocket.cxx  TCPConnectionSocket.h  TCPServerConnection.cxx  TCPServerSocket.cpp  TCPServerSocket.h
ShadeTech/Platform/Windows/: Socket.cxx  WindowsApplication.cxx  WindowsApplication.h  Windows_application.h
ShadeTech/Platform/Windows/Networking/: Networking.cpp  Networking.cxx  Networking.h  Socket.cxx  networking.cpp  networking.h
ShadeTech/Platform/Windows/Networking/Socket/: TCPClientSocket.cpp  TCPClientSocket.cxx  TCPClientSocket.h  TCPConnectionSocket.cpp  TCPConnectionSocket.cxx  TCPConnectionSocket.h  TCPServerSocket.cpp  TCPServerSocket.cxx  TCPServerSocket.h  Windows_TCP_client_socket.cpp  Windows_TCP_client_socket.h  Windows_TCP_connection_socket.cpp  Windows_TCP_connection_socket.h  Windows_TCP_server_socket.cpp  Windows_TCP_server_socket.h
ShadeTech/Rendering/: Instance.cxx  Rendering.cxx  Rendering.h  Window.cpp  Window.h
ShadeTech/Rendering/API/Vulkan/: CommandBuffer.cpp  CommandBuffer.h  Device.cpp  Device.h  Helpers.h  Instance.cpp  Instance.h  Intance.cpp  Swapchain.cpp  Swapchain.h  Synchronization.cpp  Synchronization.h  VulkanAPI.cpp  VulkanAPI.h
ShadeTech/Rendering/RHI/: rhi.cxx
ShadeTech/Rendering/RHI/Vulkan/: Instance.cxx
ShadeTech/client/: CMakeLists.txt  client.cpp
ShadeTech/core/: CMakeLists.txt  application.h  compiler.h  memory.cpp  memory.cxx  memory.h  move.h  optional.h  platform.h  result.h  types.h
ShadeTech/core/audio/platform/windows/: win_microphone.cpp  win_microphone.h
ShadeTech/core/data_containers/: array.h
ShadeTech/core/init/: Windows_application.cpp  Windows_application.h
ShadeTech/core/memory/: arena.cpp  arena.h
ShadeTech/core/networking/: ip_address.h  packet.h
ShadeTech/core/networking/Socket/: TCP_client_socket.cpp  TCP_client_socket.h  TCP_connection_socket.h  TCP_server_socket.h
ShadeTech/core/networking/platform/Windows/: Windows_TCP_client_socket.h  Windows_TCP_connection_socket.cpp  Windows_TCP_connection_socket.h  Windows_TCP_server_socket.cpp  Windows_TCP_server_socket.h  networking.cpp  networking.h
ShadeTech/core/networking/platform/posix/: Posix_TCP_client_socket.cpp  Posix_TCP_client_socket.h  Posix_TCP_connection_socket.cpp  Posix_TCP_connection_socket.h  Posix_TCP_server_socket.cpp  Posix_TCP_server_socket.h
ShadeTech/core/rendering/platform/macos/: macos_window.h  macos_window.mm
ShadeTech/core/rendering/platform/windows/D3D12/: sdk.cpp  sdk.h
ShadeTech/core/string/: string.cpp  string.cxx  string.h  string_utils.cpp  string_utils.cxx  string_utils.h  stringview.cxx  stringview.h
ShadeTech/core/utils/: assert.h  atomic.cpp  atomic.h  function.h  log.cpp  log.h  move.h  optional.h  pair.h  result.h  ring_buffer.h  type_traits.h
ShadeTech/core/utils/memory/: memory.cpp  memory.h
ShadeTech/core/utils/string/: string.cpp  string.h  string_utils.cpp  string_utils.h  string_view.cpp  string_view.h  stringview.h
ShadeTech/tests/: CMakeLists.txt  dynarray_tests.cpp
scripts/: lint.py  run-clang-tidy.py  static-analysis.py
